# grad_traj_optimization

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: display.h  douglas_peucker.hpp  grad_traj_optimizer.h  qp_generator.h
launch/: click.launch  random.launch  random_opt.launch  text_input.launch  traj.launch  traj_opt.launch  traj_rviz.launch
lib/: libnlopt.so.0.9.0
rviz/: traj.rviz
src/: example_click.cpp  example_random.cpp  example_text_input.cpp  qp_generator.cpp  rdp_example.cpp
