<?xml version="1.0"?>
<package>
  <name>grad_traj_optimization</name>
  <version>0.0.1</version>
  <description>Gradient-Based Online Safe Trajectory Generator </description>
  <maintainer email="sjtu@foxmail.com">zby</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visulization_msgs</build_depend>
  <build_depend>arc_utilities</build_depend>
  <build_depend>sdf_tools</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>visulization_msgs</run_depend>
  <run_depend>arc_utilities</run_depend>
  <run_depend>sdf_tools</run_depend>
  <run_depend>message_runtime</run_depend>



  <export>
  </export>
</package>